bynkc/tests/fixtures/negative/223_sum_refinement_member/src/demo.karn
context demo

type UserId = String where NonEmpty

actor User { auth = Bearer(secret = "S"), identity = UserId }
actor Admin = User where hasClaim("admin")

service api from http {
  on GET("/x") by who: User | Admin () -> Effect[HttpResult[String]] {
    Ok("x")
  }
}
